# clickhouse-rs

./: Cargo.toml  README.md
build-tools/: sea-tests.sh  setup.sh
examples/: arrow_batch.rs  arrow_batch_schema.rs  arrow_insert.rs  arrow_sensor_data.rs  clickhouse_cloud.rs  data_row_insert.rs  data_row_schema.rs  data_rows.rs  row_batch.rs  usage.rs
macros/: Cargo.toml
sea-orm-arrow-example/: Cargo.toml
sea-orm-arrow-example/src/: main.rs
src/: data_row.rs  error.rs  insert.rs  insert_data_row.rs  lib.rs  query.rs
src/arrow/: mod.rs  schema.rs  value.rs
src/cursors/: data_row.rs  mod.rs
src/rowbinary/: mod.rs  value_de.rs  value_ser.rs
src/schema/: arrow_mapping.rs  engine.rs  mod.rs
src/types/: int256.rs
types/: Cargo.toml
